# phantom-perp

./: .env  .env.example  .gitignore  CLAUDE.md  Makefile  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/: gsd-file-manifest.json  settings.local.json
.claude/agents/: gsd-debugger.md  gsd-executor.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-verifier.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
agents/alpha/: Dockerfile  combiner.py  conflict_resolver.py  main.py  regime_detector.py  scorecard.py
agents/confirmation/: Dockerfile  batching.py  bot.py  config.py  main.py  message_composer.py  state_machine.py
agents/dashboard/: Dockerfile  main.py
agents/execution/: Dockerfile  algo_selector.py  circuit_breaker.py  config.py  main.py  order_placer.py  retry_handler.py  stop_loss_manager.py
agents/ingestion/: Dockerfile  enrichment.py  main.py  normalizer.py  state.py
agents/risk/: limits.py  (+9 more)
claude_proxy/: CLAUDE.md  claude_proxy.py
configs/: bounds.yaml  default.yaml  live.yaml  paper.yaml  regimes.yaml  sessions.yaml  strategy_matrix.yaml
orchestrator/: circuit_breakers.py  dag.py  main.py  watchdog.py
reports/: pre-v1.5-performance-report.md
scripts/: README.md  claude_proxy.py  dashboard.py  deploy.sh  manual_tune.py  query_obi_btc.py  query_oi_divergence_btc.py  reset.sh  status.sh
(+464 files in other folders)
