[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phantom-perp"
version = "0.1.0"
description = "Autonomous ETH perpetual futures trading system for Coinbase INTX"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27,<1",
    "websockets>=13,<14",
    "redis>=5.0,<6",
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2,<3",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29,<1",
    "polars>=1.0,<2",
    "structlog>=24.1,<25",
    "uvloop>=0.19,<1; sys_platform != 'win32'",
    "python-telegram-bot>=21,<22",
    "pyyaml>=6,<7",
    "orjson>=3.9,<4",
    "ta-lib>=0.4,<1",
    "numpy>=1.26,<3",
    "scikit-learn>=1.4,<2",
    "xgboost>=2,<3",
    "scipy>=1.14,<2",
    "bottleneck>=1.4,<2",
    "PyJWT>=2.8,<3",
    "cryptography>=42,<44",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5,<6",
    "ruff>=0.3,<1",
    "mypy>=1.9,<2",
    "pre-commit>=3,<4",
    "respx>=0.21,<1",
    "fakeredis>=2.21,<3",
    "freezegun>=1.4,<2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "libs", "agents"]
markers = [
    "integration: integration tests requiring Docker services",
    "e2e: end-to-end tests requiring full pipeline",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["libs", "agents", "orchestrator"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.hatch.build.targets.wheel]
packages = ["libs", "agents", "orchestrator"]
